kubernetes-labs/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
spec:
  containers:
  - name: client
    image: curlimages/curl
    command: ["sleep", "3600"]
