kubernetes-labs/config-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-secret-demo
spec:
  containers:
    - name: nginx
      image: nginx
