kubernetes-labs/dev-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-nginx
  namespace: dev
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
