kubernetes-labs/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"

          volumeMounts:
            - name: nginx-config-volume
              mountPath: /usr/share/nginx/html
            - name: secret-volume
              mountPath: /etc/secrets
              readOnly: true

      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: secret-volume
          secret:
            secretName: db-secret
