kubernetes-labs/pvc-pod-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-manual-pod
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: manual-pvc
