kubernetes-labs/second-backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: second-backend-pod
  labels:
    app: second-backend
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
