kubernetes-labs/second-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-backend-service
spec:
  selector:
    app: second-backend
  ports:
    - port: 80
      targetPort: 80
